[gd_scene load_steps=9 format=3 uid="uid://bge50pg6dll6h"]

[ext_resource type="Script" uid="uid://ci4haqv8jb15v" path="res://scripts/main.gd" id="1_o5qli"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0wfyh"]
bg_color = Color(0.08627451, 0.12941177, 0.24313726, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sugp2"]
bg_color = Color(0.05882353, 0.20392157, 0.3764706, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jyhfs"]
bg_color = Color(0.05882353, 0.20392157, 0.3764706, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbgi4"]
bg_color = Color(0.08627451, 0.12941177, 0.24313726, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tefeu"]
bg_color = Color(0.30588236, 0.8, 0.6392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6xl0"]
bg_color = Color(0.22745098, 0.60784316, 0.49411765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tipki"]
bg_color = Color(0.27058825, 0.7019608, 0.5764706, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5qli")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101960786, 0.101960786, 0.18039216, 1)

[node name="MainMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MainLayout" type="VBoxContainer" parent="MainMargin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HeaderPanel" type="PanelContainer" parent="MainMargin/MainLayout"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0wfyh")

[node name="HBoxContainer" type="HBoxContainer" parent="MainMargin/MainLayout/HeaderPanel"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainMargin/MainLayout/HeaderPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0.8509804, 1, 1)
theme_override_font_sizes/font_size = 32
text = "ü¶∏ HERO DISPATCH COMMAND"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MainMargin/MainLayout/HeaderPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResourceDisplay" type="VBoxContainer" parent="MainMargin/MainLayout/HeaderPanel/HBoxContainer"]
layout_mode = 2

[node name="MoneyLabel" type="Label" parent="MainMargin/MainLayout/HeaderPanel/HBoxContainer/ResourceDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(0.30588236, 0.8, 0.6392157, 1)
theme_override_font_sizes/font_size = 20
text = "üí∞ Money: $"

[node name="FameLabel" type="Label" parent="MainMargin/MainLayout/HeaderPanel/HBoxContainer/ResourceDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84313726, 0, 1)
theme_override_font_sizes/font_size = 20
text = "‚≠ê Fame: 0"

[node name="ContentSplit" type="HSplitContainer" parent="MainMargin/MainLayout"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 400

[node name="HeroPanel" type="PanelContainer" parent="MainMargin/MainLayout/ContentSplit"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sugp2")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMargin/MainLayout/ContentSplit/HeroPanel"]
layout_mode = 2

[node name="HeroPanelTitle" type="Label" parent="MainMargin/MainLayout/ContentSplit/HeroPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8509804, 1, 1)
theme_override_font_sizes/font_size = 24
text = "YOUR HEROES"
horizontal_alignment = 1

[node name="HeroScroll" type="ScrollContainer" parent="MainMargin/MainLayout/ContentSplit/HeroPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="HeroList" type="VBoxContainer" parent="MainMargin/MainLayout/ContentSplit/HeroPanel/VBoxContainer/HeroScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="MissionPanel" type="PanelContainer" parent="MainMargin/MainLayout/ContentSplit"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_jyhfs")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMargin/MainLayout/ContentSplit/MissionPanel"]
layout_mode = 2

[node name="MissionPanelTitle" type="Label" parent="MainMargin/MainLayout/ContentSplit/MissionPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0.8509804, 1, 1)
theme_override_font_sizes/font_size = 24
text = "MISSION MAP"
horizontal_alignment = 1

[node name="MissionMapContainer" type="Control" parent="MainMargin/MainLayout/ContentSplit/MissionPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BottomPanel" type="PanelContainer" parent="MainMargin/MainLayout"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tbgi4")

[node name="HBoxContainer" type="HBoxContainer" parent="MainMargin/MainLayout/BottomPanel"]
layout_mode = 2

[node name="UpgradeButton" type="Button" parent="MainMargin/MainLayout/BottomPanel/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_tefeu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o6xl0")
theme_override_styles/hover = SubResource("StyleBoxFlat_tipki")
text = "üîß UPGRADE HEROES"

[node name="StatusLabel" type="Label" parent="MainMargin/MainLayout/BottomPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.65882355, 0.65882355, 0.65882355, 1)
theme_override_font_sizes/font_size = 16
text = "Select heroes and missions to begin..."
horizontal_alignment = 1
